--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -438,14 +438,19 @@
 <div class="current-focus-card" style="margin-bottom: 40px; background: #ffffff; border-radius: 12px; box-shadow: 0 2px 15px rgba(0,0,0,0.05); border: 1px solid #edf2f7; overflow: hidden;">
     <div style="padding: 35px 25px; text-align: center;">
         <div style="margin-bottom: 15px; display: inline-block;">
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
+            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                <line x1="16" y1="2" x2="16" y2="6"></line>
+                <line x1="8" y1="2" x2="8" y2="6"></line>
+                <line x1="3" y1="10" x2="21" y2="10"></line>
+            </svg>
         </div>
         
         <h3 style="color: #0c2340; margin: 0 0 10px 0; font-size: 20px; font-weight: 800;">
-            Status Report: Qualifying & Schedule Update
+            Confirmed Qualifying Schedule
         </h3>
         <p style="font-size: 14px; color: #64748b; line-height: 1.5; margin: 0 auto 20px auto; max-width: 450px;">
-            Technical feedback from R1-R2 and finalized qualifying schedule following the weather disruptions.
+            Final itinerary for the remaining qualifying round and upcoming travel preparations for Cancun.
         </p>
         
         <button type="button" 
@@ -454,6 +459,8 @@
             View Detailed Status
         </button>
     </div>
+    </div>
+  
 
     <div id="focus-detail-modal" 
         onclick="if(event.target == this) this.style.display='none'" 
@@ -473,17 +480,18 @@
                         <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Qualifying Feedback (R1-R2)</span>
                     </div>
                     <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                        <strong>Ball-Striking:</strong> Consistent performance maintained (68-69). Technical focus shifted to managing the aggressive greenside setups at TPC San Antonio as the Valero Texas Open preparation continues.
+                        <strong>Ball-Striking:</strong> Remained consistent through R1-R2. Moderate wind levels provided manageable playing conditions.<br>
+                        <strong>Course Conditions:</strong> The Oaks course is currently being prepared for the Valero Texas Open, resulting in significant greenside and putting surface challenges.
                     </p>
                 </div>
 
                 <div style="background: #f8fafc; padding: 18px; border-radius: 8px; border: 1px solid #e2e8f0;">
                     <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                        <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Team Unity & Collaboration</span>
+                        <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Team & Training Activity</span>
                     </div>
                     <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                        During the storm-induced closure, the team utilized indoor facilities and Trackman sessions to stay sharp. Team relationships remain a priority, with collective training sessions ensuring all members stay focused on the Spring Opener.
+                        With campus facilities closed, Joshua and teammates are collaborating to maintain performance rhythms. Group sessions at PGA Superstore (Trackman iron work) and indoor drills at the residence are being utilized to stay ready collectively.
                     </p>
                 </div>
 
@@ -506,6 +514,9 @@
         </div>
     </div>
 </div>
+
+
+  
 
 
   
