--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -295,7 +295,7 @@
     </svg>
   </div>
   <p style="margin: 0; font-size: 13px; color: #0c2340; font-weight: 700; line-height: 1.5;">
-    NOTICE: Round 3 is confirmed for tomorrow (Jan 28) at The Canyons Course. Round 4 has been officially canceled.
+    NOTICE: Round 3 is confirmed for Jan 28 at The Canyons Course. Round 4 has been canceled.
   </p>
 </div>
 
