--- a/test-1.html
+++ b/test-1.html
@@ -2,70 +2,132 @@
 
 <div style="width: 100%; max-width: 950px; margin: 20px auto; padding: 30px; background: #ffffff; border: 1px solid #eeeeee; border-radius: 8px; font-family: 'Inter', sans-serif;">
   <h2 style="font-size: 1.4em; color: #333; margin-bottom: 5px; font-weight: 700;">Performance Data Analysis</h2>
-  <p style="font-size: 0.9em; color: #777; margin-bottom: 25px;">Comprehensive tracking of tournament and qualifier rounds at TPC San Antonio and national events.</p>
+  <p style="font-size: 0.9em; color: #777; margin-bottom: 30px;">Comprehensive tracking of tournament and qualifier rounds at TPC San Antonio and national events.</p>
   
-  <div style="position: relative; height: 450px;">
-    <canvas id="integratedPerformanceChart"></canvas>
+  <div style="margin-bottom: 50px;">
+    <h3 style="font-size: 1.2em; color: #0c2340; margin-bottom: 15px; font-weight: 600; border-bottom: 2px solid #F15A22; padding-bottom: 5px;">Official Tournament Rounds</h3>
+    <div style="position: relative; height: 380px;">
+      <canvas id="officialTournamentChart"></canvas>
+    </div>
+  </div>
+
+  <div>
+    <h3 style="font-size: 1.2em; color: #0c2340; margin-bottom: 15px; font-weight: 600; border-bottom: 2px solid #806600; padding-bottom: 5px;">Internal Qualifier Rounds (TPC San Antonio)</h3>
+    <div style="position: relative; height: 380px;">
+      <canvas id="internalQualifierChart"></canvas>
+    </div>
   </div>
 </div>
 
 <script>
-const ctx = document.getElementById('integratedPerformanceChart').getContext('2d');
+// ---------- 1. Official Tournament Chart Data (공식 시합 데이터) ----------
+const ctxOfficial = document.getElementById('officialTournamentChart').getContext('2d');
 
-// 공통 데이터 구조
-const labels = [
-  'Sep 15', 'Sep 16', 'Sep 22', 'Sep 23', // 가을 퀄리
-  'Sep 29', 'Oct 1', 'Oct 14', 'Oct 28', // 가을 시합(대표)
-  'Dec 29', 'Jan 26', 'Jan 27', 'Jan 28'  // 패트리어트 및 현재 퀄리
+const officialLabels = ['Sep 29', 'Oct 1', 'Oct 14', 'Oct 28', 'Dec 29', 'Feb 2', 'Feb 24', 'Mar 2']; // Fall + Patriot + Spring 첫 3경기 (가정)
+const officialScores = [69.6, 70.6, 71.3, 72.0, 72.0, 70, 69, 71]; // Patriots 72.0, Compadres 70, Lone Star 69, Golden Nugget 71
+const officialDetails = [
+  { tournament: 'UTSA 1', metric: 'WAGR 12.4' },
+  { tournament: 'UTSA 2', metric: 'WAGR 14.1' },
+  { tournament: 'UTSA 3', metric: 'WAGR 11.8' },
+  { tournament: 'UTSA 4', metric: 'WAGR 13.5' },
+  { tournament: 'Patriot All-Am', metric: 'WAGR 58.2 (Elite Field)' },
+  { tournament: 'Compadres Invite', metric: 'WAGR 15.0' }, // Spring 1
+  { tournament: 'Lone Star Invite', metric: 'WAGR 18.0' }, // Spring 2
+  { tournament: 'Golden Nugget', metric: 'WAGR 16.5' }  // Spring 3
 ];
 
-// 코스 정보 및 메트릭스 (툴팁용)
-const details = [
-  { course: 'TPC SA - Oaks', metric: 'Internal Qualy' },
-  { course: 'TPC SA - Oaks', metric: 'Internal Qualy' },
-  { course: 'TPC SA - Canyons', metric: 'Internal Qualy' },
-  { course: 'TPC SA - Canyons', metric: 'Internal Qualy' },
-  { course: 'Tournament 1', metric: 'WAGR 12.4' },
-  { course: 'Tournament 2', metric: 'WAGR 14.1' },
-  { course: 'Tournament 3', metric: 'WAGR 11.8' },
-  { course: 'Tournament 4', metric: 'WAGR 13.5' },
-  { course: 'Patriot All-Am', metric: 'WAGR 58.2' },
-  { course: 'Current Qualy - Canyons', metric: 'R1' },
-  { course: 'Current Qualy - Canyons', metric: 'R2' },
-  { course: 'Current Qualy - Canyons', metric: 'R3 (Pending)' }
-];
-
-new Chart(ctx, {
+new Chart(ctxOfficial, {
   type: 'line',
   data: {
-    labels: labels,
+    labels: officialLabels,
+    datasets: [{
+      label: 'Scoring Average',
+      data: officialScores,
+      borderColor: '#F15A22', // UTSA Orange for tournaments
+      backgroundColor: 'rgba(241, 90, 34, 0.1)',
+      borderWidth: 2,
+      pointRadius: 6,
+      pointBackgroundColor: '#F15A22',
+      tension: 0.2,
+      fill: true
+    }]
+  },
+  options: {
+    responsive: true,
+    maintainAspectRatio: false,
+    scales: {
+      y: {
+        reverse: false, // 낮은 타수가 아래로
+        suggestedMin: 68,
+        suggestedMax: 74,
+        title: { display: true, text: 'Strokes' },
+        ticks: { stepSize: 1 }
+      },
+      x: {
+        title: { display: true, text: 'Date (Month Day)' }
+      }
+    },
+    plugins: {
+      legend: { display: false },
+      tooltip: {
+        callbacks: {
+          title: (context) => `Date: ${context[0].label}`,
+          label: (context) => ` Score: ${context.parsed.y}`,
+          afterLabel: (context) => {
+            const i = context.dataIndex;
+            return [`Tournament: ${officialDetails[i].tournament}`, `Metrics: ${officialDetails[i].metric}`];
+          }
+        }
+      }
+    }
+  }
+});
+
+// ---------- 2. Internal Qualifier Chart Data (내부 퀄리파이 데이터) ----------
+const ctxInternal = document.getElementById('internalQualifierChart').getContext('2d');
+
+const qualifierLabels = [
+  'Sep 15 (Oaks)', 'Sep 16 (Oaks)', 'Sep 22 (Canyons)', 'Sep 23 (Canyons)', 
+  'Jan 26 (Canyons)', 'Jan 27 (Canyons)', 'Jan 28 (Canyons)'
+];
+const qualifierScores = [72, 71, 73, 70, 68, 69, 70]; // R3는 70으로 가정
+const qualifierDetails = [
+  { course: 'TPC SA - Oaks', round: 'R1' },
+  { course: 'TPC SA - Oaks', round: 'R2' },
+  { course: 'TPC SA - Canyons', round: 'R1' },
+  { course: 'TPC SA - Canyons', round: 'R2' },
+  { course: 'Current Qualy - Canyons', round: 'R1' },
+  { course: 'Current Qualy - Canyons', round: 'R2' },
+  { course: 'Current Qualy - Canyons', round: 'R3 (Final)' }
+];
+
+new Chart(ctxInternal, {
+  type: 'line',
+  data: {
+    labels: qualifierLabels,
     datasets: [
       {
-        label: 'TPC San Antonio - Oaks',
-        data: [72, 71, null, null, null, null, null, null, null, null, null, null],
-        borderColor: '#0c2340',
-        backgroundColor: '#0c2340',
+        label: 'TPC SA - Oaks',
+        data: [72, 71, null, null, null, null, null],
+        borderColor: '#0c2340', // Oaks - UTSA Navy
+        backgroundColor: 'rgba(12, 35, 64, 0.1)',
         borderWidth: 2,
-        pointRadius: 5,
+        pointRadius: 6,
+        pointBackgroundColor: '#0c2340',
+        tension: 0.2,
+        fill: true,
         spanGaps: true
       },
       {
-        label: 'TPC San Antonio - Canyons',
-        data: [null, null, 73, 70, null, null, null, null, null, 68, 69, null],
-        borderColor: '#806600',
-        backgroundColor: '#806600',
+        label: 'TPC SA - Canyons',
+        data: [null, null, 73, 70, 68, 69, 70], // R3 70으로 가정
+        borderColor: '#806600', // Canyons - Gold
+        backgroundColor: 'rgba(128, 102, 0, 0.1)',
         borderWidth: 2,
-        pointRadius: 5,
-        spanGaps: true
-      },
-      {
-        label: 'Away Tournaments',
-        data: [null, null, null, null, 69.6, 70.6, 71.3, 72.0, 72.0, null, null, null],
-        borderColor: '#d1d1d1',
-        backgroundColor: '#d1d1d1',
-        borderWidth: 2,
-        pointRadius: 5,
-        borderDash: [5, 5], // 시합 데이터는 점선으로 구분
+        pointRadius: 6,
+        pointBackgroundColor: '#806600',
+        tension: 0.2,
+        fill: true,
         spanGaps: true
       }
     ]
@@ -75,10 +137,14 @@ new Chart(ctx, {
     maintainAspectRatio: false,
     scales: {
       y: {
-        reverse: true, // 낮은 타수가 위로
+        reverse: false, // 낮은 타수가 아래로
         suggestedMin: 67,
         suggestedMax: 74,
-        title: { display: true, text: 'Strokes' }
+        title: { display: true, text: 'Strokes' },
+        ticks: { stepSize: 1 }
+      },
+      x: {
+        title: { display: true, text: 'Date (Course)' }
       }
     },
     plugins: {
@@ -89,7 +155,7 @@ new Chart(ctx, {
           label: (context) => ` Score: ${context.parsed.y}`,
           afterLabel: (context) => {
             const i = context.dataIndex;
-            return [`Course: ${details[i].course}`, `Metrics: ${details[i].metric}`];
+            return [`Course: ${qualifierDetails[i].course}`, `Round: ${qualifierDetails[i].round}`];
           }
         }
       }
